tests/whiley/valid/test_194.wyal
type cr3nat is (int x)
where:
    x < 10


assert "type invariant not satisfied":
    if:
        true
    then:
        1 is cr3nat


